# platonic

./: .travis.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
platonic/: __init__.py  const.py  mapping.py  memoize.py  queue.py  type_args.py
platonic/queue/: __init__.py  base.py  errors.py  input.py  message.py  output.py  sender.py  types.py
tests/: test_const.py  test_type_args.py
tests/test_example/: test_some_function.py
tests/test_queue/: test_base_queue.py  test_errors.py
