[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "platonic"
version = "0.1.1"
description = "Abstract datastructures for Clean Architecture applications in Python."
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/python-platonic/platonic"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
typecasts = "^0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.3"

safety = "^1.9"

pytest = "^5.4"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"

sphinx = "^2.2"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.7"
